--- a/portfoliopage2.html
+++ b/portfoliopage2.html
@@ -21,29 +21,43 @@
                 <a href=""><img src="ASSETS/image-logo-little-Stark.svg" alt="photo du logo en petit"></a>
             </div>
             <!----------------- Diapo des projets dans nav   ----------------->
-            <div class="diaposNav flex">
+            <div class="diaposNav ">
                 <span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span>
         </nav>
     </header>
     <!----------------- MAIN   ----------------->
     <main>
         <!----------------- welcome   ----------------->
-      
+        <div class="welcome flex">
+            <h2 class="about">Bienvenue!<br> Je suis un développeur web passionné et designer UX/UI dédié à créer
+                des produits
+                digitaux innovants et convaincants.<br>Si vous êtes intéressé par mon travail ou souhaitez discuter
+                d'une collaboration potentielle,</h2>
+        </div>
+        <!----------------- send me mail   ----------------->
+        <div class="mail">
+            <a href="envoyez-moi un mail">envoyez-moi un
+                mail.</a><!----------------- faire remonter le mail   ----------------->
+        </div>
+        <!----------------- CTA projet   ----------------->
+        <div class="buttonProject">
+            <li><a href=""></a></li>
+        </div>
     </main>
     <!----------------- FOOTER   ----------------->
     <footer>
-        <!--<div>
+        <!----------------- social media   ----------------->
         <nav>
             <ul>
                 <li><a href="mail"></a>mail</li>
-                <li><a href="instagram"></a>instagra</li>
+                <li><a href="instagram"></a>instagram</li>
                 <li><a href="linkedIn"></a>linkedIn</li>
                 <li><a href="twitter"></a>twitter</li>
                 <li><a href="github"></a>github</li>
             </ul>
         </nav>
-    </div> 
-    -->
+        </div>
+
 
     </footer>
     <script src="./app.js" defer></script>
