POrtfolio du vendredi 15/03 16h30
images responsive*/ /****a rajouter ****/ +STARK a refaire comme sur l'image + mettre en position + faire effet (vu sous anime) + page 2 faite à 80% + page index à refaire

--- a/indexHome.html
+++ b/indexHome.html
@@ -6,49 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio de Stark</title>
     <meta name="description"
-        content="le portofolio de Stark qui regroupe tous les projets professionnels et personnels qui sont finis, en cous et a venir">
+        content="le portofolio de Stark qui regroupe tous les projets professionnels et personnels qui sont finis, en cours et a venir">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styleHome.css">
 </head>
 
 <body>
-
+    <!-- HEADER -->
     <header>
-        <!----------------- HEADER   ----------------->
-        <nav class="nav">
-            <!----------------- Petit logo   ----------------->
-            <div class="smallLogo">
-                <a href=""><img src="ASSETS/image-logo-little-Stark.svg" alt="photo du logo en petit"></a>
-            </div>
-            <!----------------- Diapo des projets dans nav   ----------------->
-            <div class="diaposNav flex">
-                <span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span>
-        </nav>
-    </header>
-    <!----------------- MAIN   ----------------->
-    <main>
-        <!----------------- Grand logo   ----------------->
-        <div class="bigLogo">
-            <a href=""><img src="ASSETS/image-logo-big-Stark.svg" alt="photo du logo en gros"></a>
+        <!-- Petit logo  -->
+        <a class="smallLogoHeader" href=""><img src="ASSETS/image-logo-little-Stark.svg"
+                alt="photo du logo en petit"></a>
+        <!-- Diapo des projets dans nav   -->
+        <div class="diaposNav text-center">
+            <span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span>
         </div>
+    </header>
+    <!-- MAIN   -->
+    <main><!-- STARK a refaire comme sur l'image + mettre en position + faire effet (vu sous anime)-->
+            <span>S</span><span>T</span><span>A</span><span>R</span><span>K</span>
+
     </main>
-    <!----------------- FOOTER   ----------------->
+    <!-- FOOTER   -->
     <footer>
-        <!--<div>
-        <nav>
-            <ul>
-                <li><a href="mail"></a>mail</li>
-                <li><a href="instagram"></a>instagra</li>
-                <li><a href="linkedIn"></a>linkedIn</li>
-                <li><a href="twitter"></a>twitter</li>
-                <li><a href="github"></a>github</li>
-            </ul>
-        </nav>
-    </div> 
-    -->
+        <!-- social media   --> <!-- SPRITE A FAIRE-->
+        <ul class="socialMedia flex">
+            <li><a href="mail"><img src="./ASSETS/mail 1.png" alt="logo du mail"></a></li>
+            <li><a href="instagram"><img src="./ASSETS/Instagram.png" alt="logo du instagram"></a></li>
+            <li><a href="linkedIn"><img src="./ASSETS/Linkedin.png" alt="logo du linkedin"></a></li>
+            <li><a href="twitter"><img src="./ASSETS/Twitter.png" alt="logo du twitter"></a></li>
+            <li><a href="github"><img src="./ASSETS/Github.png" alt="logo du github"></a></li>
+        </ul>
 
     </footer>
-    <script src="./app.js" defer></script>
 </body>
 
 </html>
