--- a/portfoliopage2.html
+++ b/portfoliopage2.html
@@ -6,61 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio de Stark</title>
     <meta name="description"
-        content="le portofolio de Stark qui regroupe tous les projets professionnels et personnels qui sont finis, en cous et a venir">
+        content="le portofolio de Stark qui regroupe tous les projets professionnels et personnels qui sont finis, en cours et a venir">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styleHome.css">
 </head>
 
 <body>
-
+    <!-- HEADER -->
     <header>
-        <!----------------- HEADER   ----------------->
-        <nav class="nav">
-            <!----------------- Petit logo   ----------------->
-            <div class="smallLogo">
-                <a href=""><img src="ASSETS/image-logo-little-Stark.svg" alt="photo du logo en petit"></a>
-            </div>
-            <!----------------- Diapo des projets dans nav   ----------------->
-            <div class="diaposNav ">
-                <span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span>
-        </nav>
+        <!-- Petit logo  -->
+        <a class="smallLogoHeader" href=""><img src="ASSETS/image-logo-little-Stark.svg"
+                alt="photo du logo en petit"></a>
+        <!-- Diapo des projets dans nav   -->
+        <div class="diaposNav text-center">
+            <span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span><span>|</span>
+        </div>
     </header>
-    <!----------------- MAIN   ----------------->
+    <!-- MAIN   -->
     <main>
-        <!----------------- welcome   ----------------->
-        <div class="welcome flex">
-            <h2 class="about">Bienvenue!<br> Je suis un développeur web passionné et designer UX/UI dédié à créer
-                des produits
-                digitaux innovants et convaincants.<br>Si vous êtes intéressé par mon travail ou souhaitez discuter
-                d'une collaboration potentielle,</h2>
+        <!-- welcome   -->
+        <div class="about">
+            <h2>Bienvenue!</h2>
+            <p>Je suis un développeur web passionné et designer UX/UI dédié à créer des
+                produits digitaux innovants et convaincants.<br>Si vous êtes intéressé par mon travail ou souhaitez
+                discuter d'une collaboration potentielle,
+                <a href="mailto: someone@example.com">envoyez-moi un mail.</a>
+            </p><!--*** lien vers mail pro ***-->
+
         </div>
-        <!----------------- send me mail   ----------------->
-        <div class="mail">
-            <a href="envoyez-moi un mail">envoyez-moi un
-                mail.</a><!----------------- faire remonter le mail   ----------------->
-        </div>
-        <!----------------- CTA projet   ----------------->
-        <div class="buttonProject">
-            <li><a href=""></a></li>
-        </div>
-    </main>
-    <!----------------- FOOTER   ----------------->
-    <footer>
-        <!----------------- social media   ----------------->
-        <nav>
-            <ul>
-                <li><a href="mail"></a>mail</li>
-                <li><a href="instagram"></a>instagram</li>
-                <li><a href="linkedIn"></a>linkedIn</li>
-                <li><a href="twitter"></a>twitter</li>
-                <li><a href="github"></a>github</li>
-            </ul>
-        </nav>
+        <div class="project">
+            <!-- CTA projet   -->
+            <div class="ctaProject" >
+                <a class="buttonProject" href="">PROJETS</a>
+            </div>
         </div>
 
+    </main>
+    <!-- FOOTER   -->
+    <footer>
+        <!-- social media   --> <!-- SPRITE A FAIRE-->
+        <ul class="socialMedia flex">
+            <li><a href="mail"><img src="./ASSETS/mail 1.png" alt="logo du mail"></a></li>
+            <li><a href="instagram"><img src="./ASSETS/Instagram.png" alt="logo du instagram"></a></li>
+            <li><a href="linkedIn"><img src="./ASSETS/Linkedin.png" alt="logo du linkedin"></a></li>
+            <li><a href="twitter"><img src="./ASSETS/Twitter.png" alt="logo du twitter"></a></li>
+            <li><a href="github"><img src="./ASSETS/Github.png" alt="logo du github"></a></li>
+        </ul>
 
     </footer>
-    <script src="./app.js" defer></script>
 </body>
 
 </html>
