--- a/indexHome.html
+++ b/indexHome.html
@@ -28,6 +28,7 @@
 
     </main>
     <!-- FOOTER   -->
+    <h1>HELLLLOOOOOOO HHHHHHHEEEEEEEEELLLLLLLLLLOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO</h1>
     <footer>
         <!-- social media   --> <!-- SPRITE A FAIRE-->
         <ul class="socialMedia flex">
